--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = libs/smart_ptr
 	url = http://github.com/boostorg/smart_ptr.git
         fetchRecurseSubmodules = on-demand
+[submodule "serialization"]
+	path = libs/serialization
+	url = http://github.com/boostorg/serialization.git
+        fetchRecurseSubmodules = on-demand
