added flyweight from trunk

--- a/.gitmodules
+++ b/.gitmodules
@@ -346,3 +346,7 @@
 	path = libs/accumulators
 	url = http://github.com/boostorg/accumulators.git
         fetchRecurseSubmodules = on-demand
+[submodule "flyweight"]
+	path = libs/flyweight
+	url = http://github.com/boostorg/flyweight.git
+        fetchRecurseSubmodules = on-demand
